--- a/Project/server/src/main/resources/application.properties
+++ b/Project/server/src/main/resources/application.properties
@@ -18,4 +18,6 @@ spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 
+###### Various Properties ######
+
 
