--- a/Labs/lab5/server/src/main/resources/application.properties
+++ b/Labs/lab5/server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ###### Mongo Proprieties ######
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=millepedibus
+spring.data.mongodb.database=millepedibus_lab5
 ###### Email Properties ######
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
