--- a/Project/dockerize/.env
+++ b/Project/dockerize/.env
@@ -2,4 +2,4 @@ APP_IMAGE_VERSION=latest
 APP_BUILD_VERSION=0.0.1-SNAPSHOT
 APP_JAR_NAME=project-0.0.1-SNAPSHOT
 PATH_JAR_FILES=server/target/*.jar
-ARGS_SERVER=""
+ARGS_SERVER="--real=JsonFiles/FilesTable.json"
