--- a/Project/Client/package.json
+++ b/Project/Client/package.json
@@ -22,6 +22,7 @@
         "@angular/platform-browser": "~8.0.0",
         "@angular/platform-browser-dynamic": "~8.0.0",
         "@angular/router": "~8.0.0",
+        "angular-svg-icon": "^8.0.0",
         "ngx-socket-io": "^2.1.1",
         "rxjs": "~6.4.0",
         "tslib": "^1.9.0",
