--- a/Project/Client/package.json
+++ b/Project/Client/package.json
@@ -11,6 +11,7 @@
     },
     "private": true,
     "dependencies": {
+        "@agm/core": "^1.0.0",
         "@angular/animations": "~8.0.0",
         "@angular/cdk": "^8.0.2",
         "@angular/common": "~8.0.0",
@@ -22,6 +23,7 @@
         "@angular/platform-browser": "~8.0.0",
         "@angular/platform-browser-dynamic": "~8.0.0",
         "@angular/router": "~8.0.0",
+        "agm-direction": "^0.7.8",
         "angular-svg-icon": "^8.0.0",
         "ngx-socket-io": "^2.1.1",
         "rxjs": "~6.4.0",
