--- a/Project/Client/package.json
+++ b/Project/Client/package.json
@@ -25,6 +25,7 @@
         "@angular/router": "~8.0.0",
         "agm-direction": "^0.7.8",
         "angular-svg-icon": "^8.0.0",
+        "ngx-material-timepicker": "^5.1.1",
         "ngx-socket-io": "^2.1.1",
         "rxjs": "~6.4.0",
         "tslib": "^1.9.0",
