--- a/Project/Client/package.json
+++ b/Project/Client/package.json
@@ -23,11 +23,18 @@
         "@angular/platform-browser": "~8.0.0",
         "@angular/platform-browser-dynamic": "~8.0.0",
         "@angular/router": "~8.0.0",
+        "@ngu/carousel": "^1.5.5",
+        "@types/sockjs-client": "^1.1.1",
+        "@types/stompjs": "^2.3.4",
         "agm-direction": "^0.7.8",
         "angular-svg-icon": "^8.0.0",
+        "hammerjs": "^2.0.8",
+        "net": "^1.0.2",
         "ngx-material-timepicker": "^5.1.1",
         "ngx-socket-io": "^2.1.1",
         "rxjs": "~6.4.0",
+        "sockjs-client": "^1.4.0",
+        "stompjs": "^2.3.3",
         "tslib": "^1.9.0",
         "zone.js": "~0.9.1"
     },
